fix overflow-x in menu

--- a/themes/pensoft/assets/less/components/navbar.less
+++ b/themes/pensoft/assets/less/components/navbar.less
@@ -125,7 +125,7 @@
             padding-left: 0;
             padding-right: 0;
             width: 100%;
-            overflow-x: auto;
+            // overflow-x: auto;
 
             .navbar-nav {
                 justify-content: flex-start;
